# poststack

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  SIMPLIFICATION_PLAN.md  build_images.py  pyproject.toml  test_liquibase_integration.py
containers/apache/: Dockerfile
containers/base-debian/: Dockerfile
containers/dovecot/: Dockerfile
containers/liquibase/: Dockerfile  entrypoint.sh  liquibase.properties.template
containers/liquibase/changelogs/: master.xml
containers/liquibase/changelogs/v1.0/: 001-initial-schema.xml  002-indexes.xml  003-initial-data.xml
containers/postgres/: Dockerfile  entrypoint.sh  pg_hba.conf.template  postgres-pod.yaml  postgresql.conf.template
containers/postgres/docs/: postgresql-configuration.md
containers/postgresql/: Dockerfile
docs/: UX-improvements-round4-networking-etc.md  bootstrap.md  certbot-service.md  configuration.md  core-container-architecture.md  developer.md  development-phases.md  env-feature.md  postgres-debian-service.md  postgresql-container-management.md  schema_migrations.md  service-registry.md  shell-completion.md  testing.md  user-container-integration.md  ux-improvements-round1.md  ux-improvements-round2-lifecycle-error-handling.md  ux-improvements-round3-consolidation.md
migrations/: 001_initial_schema.rollback.sql  001_initial_schema.sql  002_add_indexes.rollback.sql  002_add_indexes.sql  003_initial_data.rollback.sql  003_initial_data.sql
scripts/: install_completion.py  install_completion.sh
src/poststack/: __init__.py  bootstrap.py  cli.py  cli_enhanced.py  cli_old.py  config.py  container_management.py  container_runtime.py  containers.py  database.py  database_operations.py  init.py  logging_config.py  migration_diagnostics.py  models.py  project_containers.py  real_container_builder.py  schema_management.py  schema_migration.py  service_operations.py  service_registry.py  volumes.py  volumes_old.py
src/poststack/environment/: __init__.py  config.py  environment_manager.py  orchestrator.py  port_allocator.py  substitution.py
tests/: __init__.py  conftest.py  fixtures.py  mock_containers.py  test_cli.py  test_config.py  test_container_management.py  test_database.py  test_phase4_containers.py  test_phase5_container_runtime.py  test_schema.py  test_schema_migration.py
tests/integration/: CLI_REFERENCE.md  README.md  TROUBLESHOOTING.md  __init__.py  cli_helpers.py  conftest.py  database_fixtures.py  test_cli_commands.py  test_migration_integrity.py  test_migration_recovery.py  test_migration_rollback.py
tests/integration/test_data/scenario_001/: 001_basic_schema.rollback.sql  001_basic_schema.sql  002_add_indexes.rollback.sql  002_add_indexes.sql
tests/integration/test_data/scenario_unified/: 001_create_user_table.rollback.sql  001_create_user_table.sql  002_add_user_creation_notify.rollback.sql  002_add_user_creation_notify.sql  003_add_certificate_management.rollback.sql  003_add_certificate_management.sql  004_add_dns_records.rollback.sql  004_add_dns_records.sql
